Update sidebar links in index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div class="container">
     <div class="sidebar">
       <h3>Labs & Assignments</h3>
-      <a href="index.html">index</a>
+      <a href="lab2.html">lab2</a>
       <a href="index2.html">index2</a>
       <a href="index3.html">index3</a>
       <a href="index4.html">index4</a>
