--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
   <header>
-    <img src="profile.jpg" alt="User Picture">
+    <img src="wku.jpg" alt="User Picture">
     <div>
       <h1>NAME: ABDULMEJID KASSIM</h1>
       <p>ID: NSR/0010/16</p>
@@ -74,7 +74,7 @@
       <a href="index2.html">index2</a>
       <a href="index3.html">index3</a>
       <a href="index4.html">index4</a>
-      <a href="text.html.html"></a>
+      <a href="facebook.html">facebook</a>
       <a href="calculator.html">calculator</a>
       <a href="cell.html">cell</a>
       <a href="logo.html">logo</a>
