Replace logo link with bootstrap1 link in index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <a href="facebook.html">facebook</a>
       <a href="calculator.html">calculator</a>
       <a href="cell.html">cell</a>
-      <a href="logo.html">logo</a>
+      <a href="bootstrap1.html">bootstrap1</a>
     </div>
 
     <div class="content">
