--- a/index.html
+++ b/index.html
@@ -1,89 +1,131 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My Website</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
 
-    header {
-      display: flex;
-      align-items: center;
-      background-color: #f2f2f2;
-      padding: 10px;
-    }
+    <!-- Bootstrap 5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    header img {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      margin-right: 15px;
-    }
+    <style>
+        .profile-img {
+            width: 70px;
+            height: 70px;
+            object-fit: cover;
+            border-radius: 50%;
+        }
 
-    header h1 {
-      margin: 0;
-      font-size: 22px;
-    }
+        /* Beautiful Header */
+        header {
+            background: linear-gradient(135deg, #007bff, #003e8a);
+            color: white;
+        }
 
-    .container {
-      display: flex;
-    }
+        /* Stylish Footer */
+        footer {
+            background-color: #222;
+            color: #bbb;
+            
+        }
+       footer {
+    background-color: #000;     /* Pure black */
+    color: #bbb;                /* Soft light gray text */
+    padding: 20px 0;
+    text-align: center;
+    margin-top: 40px;
+    border-top: 2px solid #333; /* Subtle border */
+    transition: all 0.3s ease;
+}
 
-    .sidebar {
-      width: 200px;
-      background-color: #ddd;
-      padding: 15px;
-      border-right: 2px solid black;
-    }
+footer:hover {
+    background-color: #000;     /* Keep black even on hover */
+    color: #fff;                /* Text becomes bright white */
+    transform: translateY(-3px); /* Lift animation */
+}
 
-    .sidebar a {
-      display: block;
-      margin: 8px 0;
-      text-decoration: none;
-      color: black;
-      font-weight: bold;
-    }
 
-    .sidebar a:hover {
-      color: blue;
-    }
+        /* CONTACT CARD STYLING */
+        .contact-card {
+            background: white;
+            border-radius: 12px;
+            padding: 20px;
+            border: 1px solid #ddd;
+            transition: all 0.4s ease;
+            box-shadow: 0px 4px 10px rgba(0,0,0,0.05);
+        }
 
-    .content {
-      flex: 1;
-      background-color: #eee;
-      padding: 20px;
-    }
-  </style>
+        /* Hover effect */
+        .contact-card:hover {
+            border-color: #007bff;
+            transform: translateY(-5px);
+            box-shadow: 0px 10px 20px rgba(0,0,0,0.15);
+        }
+
+        .contact-item {
+            font-size: 1.1rem;
+            transition: color 0.3s ease;
+        }
+
+        .contact-item:hover {
+            color: #007bff;
+        }
+        
+    </style>
 </head>
-<body>
-  <header>
-    <img src="wku.jpg" alt="User Picture">
-    <div>
-      <h1>NAME: ABDULMEJID KASSIM</h1>
-      <p>ID: NSR/0010/16</p>
-    </div>
-  </header>
+<body class="bg-light">
 
-  <div class="container">
-    <div class="sidebar">
-      <h3>Labs & Assignments</h3>
-      <a href="lab3.html">lab3</a>
-      <a href="index3.html">index3</a>
-      <a href="index4.html">index4</a>
-      <a href="facebook.html">facebook</a>
-      <a href="calculator.html">calculator</a>
-      <a href="cell.html">cell</a>
-      <a href="bootstrap1.html">bootstrap1</a>
-    </div>
+    <!-- HEADER -->
+    <header class="py-3 px-4 shadow d-flex align-items-center gap-3">
+        <img src="profile.jpg" class="profile-img" alt="User Picture">
 
-    <div class="content">
-      <h2>My Profile</h2>
-      <p>Hi I am Abdulmejid And This is my profile section. I am a student of Software engineering Department.</p>
-    </div>
-  </div>
-  <p>contact me</p>
-</body>
-</html>
+        <div>
+            <h4 class="m-0 fw-bold text-white">NAME: ABDULMEJID KASSIM</h4>
+            <p class="m-0 text-light">ID: NSR/0010/16</p>
+        </div>
+    </header>
+
+    <!-- MAIN CONTAINER -->
+    <div class="container-fluid">
+        <div class="row">
+
+            <!-- SIDEBAR -->
+            <nav class="col-12 col-md-3 col-lg-2 bg-white border-end p-3">
+                <h5 class="fw-bold">Labs & Assignments</h5>
+
+                <div class="list-group mt-3">
+                    <a href="facebook.html" class="list-group-item list-group-item-action">Facebook</a>
+                    <a href="index2.html" class="list-group-item list-group-item-action">Index2</a>
+                    <a href="index3.html" class="list-group-item list-group-item-action">Index3</a>
+                    <a href="index4.html" class="list-group-item list-group-item-action">Index4</a>
+                    <a href="calculator.html" class="list-group-item list-group-item-action">Calculator</a>
+                    <a href="cell.html" class="list-group-item list-group-item-action">Cell</a>
+                    <a href="page.html" class="list-group-item list-group-item-action">Page</a>
+                </div>
+            </nav>
+
+            <!-- CONTENT -->
+            <main class="col-12 col-md-9 col-lg-10 p-4">
+                <h2 class="fw-bold">My Profile</h2>
+                <p class="lead">
+                    Hi, I am Abdulmejid and this is my profile section.
+                    I am a student of the Software Engineering Department.
+                </p>
+
+                <!-- CONTACT ME SECTION -->
+                <div class="contact-card mt-4">
+                    <h4 class="fw-bold mb-3">Contact Me</h4>
+
+                    <p class="contact-item">
+                        📧 Email: <strong>mezidkassim22@gmail.com</strong>
+                    </p>
+
+                    <p class="contact-item">
+                        📞 Phone: <strong>+251 931109462</strong>
+                    </p>
+
+                    <p class="contact-item">
+                        📍 Address: <strong>Addis Ababa, Ethiopia</strong>
+<footer>
+  <p>&copy;2025 Abdulmejid KASSIM.All rights Reserved.</p>
+</footer>
