--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ footer:hover {
                     <a href="calculator.html" class="list-group-item list-group-item-action">Calculator</a>
                     <a href="cell.html" class="list-group-item list-group-item-action">Cell</a>
                     <a href="page.html" class="list-group-item list-group-item-action">Page</a>
+                     <a href="bootstrap1.html" class="list-group-item list-group-item-action">bootstrap1</a>
                 </div>
             </nav>
 
