Refactor bootstrap3.html for responsive layout
Updated layout and styles for a responsive Bootstrap design.

--- a/bootstrap3.html
+++ b/bootstrap3.html
@@ -1,44 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Modern Layout</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Responsive Bootstrap Layout</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  >
 
-    <style>
-        .column-box {
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 48px;
-            font-weight: 600;
-        }
-    </style>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow-x: hidden;
+    }
+
+    .column-box {
+      height: 100vh;
+      min-width: 250px; /* ensures scroll on small screens */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 48px;
+      font-weight: 600;
+      flex-shrink: 0; /* prevent shrinking */
+    }
+
+    .left-column {
+      background-color: #ffcc99;
+    }
+
+    .center-column {
+      background-color: #99a0ff;
+    }
+
+    .right-column {
+      background-color: #ffcc99;
+    }
+
+    .scroll-container {
+      display: flex;
+      flex-wrap: nowrap;
+      overflow-x: auto;
+      width: 100%;
+      scroll-behavior: smooth;
+    }
+
+    /* Optional: hide scrollbar in Webkit */
+    .scroll-container::-webkit-scrollbar {
+      display: none;
+    }
+  </style>
 </head>
+<body>
 
-<body class="m-0">
-
-    <div class="container-fluid p-0">
-        <div class="row g-0 d-flex flex-nowrap">
-
-            <div class="col-4 column-box" style="background-color:#ffcc99;">
-                Left
-            </div>
-
-            <div class="col-4 column-box" style="background-color:#99a0ff;">
-                Center
-            </div>
-
-            <div class="col-4 column-box" style="background-color:#ffcc99;">
-                Right
-            </div>
-
-        </div>
+  <div class="scroll-container">
+    <div class="column-box left-column">
+      Left
     </div>
+
+    <div class="column-box center-column">
+      Center
+    </div>
+
+    <div class="column-box right-column">
+      Right
+    </div>
+  </div>
+
+  <!-- Bootstrap JS Bundle -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
 
 </body>
 </html>
