--- a/bootstrap2.html
+++ b/bootstrap2.html
@@ -6,9 +6,20 @@
   <title>Horizontal Scroll Layout - Bootstrap</title>
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  >
 
   <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+
     .area {
       height: 20vh;
       display: flex;
@@ -18,19 +29,58 @@
       font-weight: 600;
     }
 
+    .scroll-wrapper {
+      position: relative;
+      width: 100%;
+    }
+
+    .scroll-container {
+      display: flex;
+      overflow-x: auto;
+      flex-wrap: nowrap;
+      width: 100%;
+      scroll-behavior: smooth;
+      padding: 10px 0;
+    }
+
+    .scroll-container::-webkit-scrollbar {
+      display: none;
+    }
+
     .content-area {
       height: 60vh;
+      min-width: 300px;
+      margin: 0 10px;
       display: flex;
       justify-content: center;
       align-items: center;
       font-size: 26px;
       font-weight: 600;
-      min-width: 300px; /* ensures scroll on small screens */
+      flex-shrink: 0;
+      border-radius: 8px;
     }
 
-    .scroll-container {
-      overflow-x: auto;
-      white-space: nowrap;
+    .scroll-btn {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: rgba(0,0,0,0.5);
+      border: none;
+      color: white;
+      font-size: 30px;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      cursor: pointer;
+      z-index: 10;
+    }
+
+    .scroll-btn-left {
+      left: 10px;
+    }
+
+    .scroll-btn-right {
+      right: 10px;
     }
   </style>
 </head>
@@ -42,29 +92,44 @@
     Header
   </header>
 
-  <!-- Horizontally scrollable content -->
-  <div class="scroll-container">
-    <div class="d-flex flex-row">
-
-      <div class="content-area bg-warning text-dark flex-shrink-0">
-        Left
-      </div>
-
-      <div class="content-area bg-success text-white flex-shrink-0">
-        Center
-      </div>
-
-      <div class="content-area bg-info text-dark flex-shrink-0">
-        Right
-      </div>
-
+  <!-- Scrollable content with buttons -->
+  <div class="scroll-wrapper my-3">
+    <button class="scroll-btn scroll-btn-left" onclick="scrollLeft()">&#8249;</button>
+    <div id="scrollContainer" class="scroll-container">
+      <div class="content-area bg-warning text-dark">Left</div>
+      <div class="content-area bg-success text-white">Center</div>
+      <div class="content-area bg-info text-dark">Right</div>
+      <div class="content-area bg-purple text-white">Extra 1</div>
+      <div class="content-area bg-pink text-white">Extra 2</div>
     </div>
+    <button class="scroll-btn scroll-btn-right" onclick="scrollRight()">&#8250;</button>
   </div>
 
   <!-- Footer -->
   <footer class="area bg-primary text-white w-100">
     Footer
   </footer>
+
+  <!-- Bootstrap JS Bundle -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
+
+  <!-- Scroll JS -->
+  <script>
+    const container = document.getElementById('scrollContainer');
+    const scrollAmount = 300; // Adjust scroll distance per click
+
+    function scrollLeft() {
+      container.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
+    }
+
+    function scrollRight() {
+      container.scrollBy({ left: scrollAmount, behavior: 'smooth' });
+    }
+  </script>
 
 </body>
 </html>
