--- a/bootstrap2.html
+++ b/bootstrap2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap2 Horizontal Scroll</title>
+  <title>Bootstrap2 Horizontal Scroll Layout</title>
 
   <!-- Bootstrap CSS -->
   <link
@@ -18,133 +18,95 @@
       margin: 0;
       padding: 0;
       height: 100%;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f8f9fa;
     }
 
     /* Header & Footer */
     .area {
-      height: 20vh;
+      height: 18vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 26px;
-      font-weight: 600;
+      font-size: 28px;
+      font-weight: 700;
       color: white;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
     }
 
     .header {
-      background-color: #dc3545; /* Bootstrap red */
+      background: linear-gradient(90deg, #dc3545, #e4606d);
     }
 
     .footer {
-      background-color: #0d6efd; /* Bootstrap blue */
+      background: linear-gradient(90deg, #0d6efd, #3b82f6);
     }
 
     /* Scrollable container */
-    .scroll-wrapper {
-      position: relative;
-      width: 100%;
-    }
-
     .scroll-container {
       display: flex;
       overflow-x: auto;
-      flex-wrap: nowrap;
+      scroll-snap-type: x mandatory;
       scroll-behavior: smooth;
-      padding: 10px 0;
+      padding: 20px 0;
     }
 
     .scroll-container::-webkit-scrollbar {
-      display: none; /* hide scrollbar */
+      display: none; /* hides scrollbar */
     }
 
-    /* Individual content boxes */
+    /* Content boxes */
     .content-area {
+      scroll-snap-align: start;
       min-width: 300px;
       height: 60vh;
-      margin: 0 10px;
+      margin: 0 15px;
       display: flex;
       justify-content: center;
       align-items: center;
       font-size: 26px;
       font-weight: 600;
       flex-shrink: 0;
-      border-radius: 8px;
+      border-radius: 15px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
       color: white;
+      transition: transform 0.3s, box-shadow 0.3s;
     }
 
+    .content-area:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+    }
+
+    /* Colors */
     .bg-warning { background-color: #ffc107 !important; color: black !important; }
     .bg-success { background-color: #198754 !important; }
     .bg-info { background-color: #0dcaf0 !important; color: black !important; }
     .bg-purple { background-color: #6f42c1 !important; }
     .bg-pink { background-color: #d63384 !important; }
 
-    /* Scroll buttons */
-    .scroll-btn {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background-color: rgba(0,0,0,0.5);
-      border: none;
-      color: white;
-      font-size: 30px;
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      cursor: pointer;
-      z-index: 10;
-    }
-
-    .scroll-btn-left { left: 10px; }
-    .scroll-btn-right { right: 10px; }
   </style>
 </head>
-<body class="bg-light">
+<body>
 
   <!-- Header -->
   <header class="area header w-100">
-    Header
+    Bootstrap2 Horizontal Scroll Layout
   </header>
 
-  <!-- Scrollable content section -->
-  <div class="scroll-wrapper my-3">
-    <button class="scroll-btn scroll-btn-left" onclick="scrollLeft()">&#8249;</button>
-
-    <div id="scrollContainer" class="scroll-container">
-      <div class="content-area bg-warning">Left</div>
-      <div class="content-area bg-success">Center</div>
-      <div class="content-area bg-info">Right</div>
-      <div class="content-area bg-purple">Extra 1</div>
-      <div class="content-area bg-pink">Extra 2</div>
-    </div>
-
-    <button class="scroll-btn scroll-btn-right" onclick="scrollRight()">&#8250;</button>
+  <!-- Scrollable content section (CSS scroll snapping) -->
+  <div class="scroll-container">
+    <div class="content-area bg-warning">Left</div>
+    <div class="content-area bg-success">Center</div>
+    <div class="content-area bg-info">Right</div>
+    <div class="content-area bg-purple">Extra 1</div>
+    <div class="content-area bg-pink">Extra 2</div>
   </div>
 
   <!-- Footer -->
   <footer class="area footer w-100">
     Footer
   </footer>
-
-  <!-- Bootstrap JS Bundle -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"
-  ></script>
-
-  <!-- Scroll buttons JS -->
-  <script>
-    const container = document.getElementById('scrollContainer');
-    const scrollAmount = 300;
-
-    function scrollLeft() {
-      container.scrollBy({ left: -scrollAmount, behavior: 'smooth' });
-    }
-
-    function scrollRight() {
-      container.scrollBy({ left: scrollAmount, behavior: 'smooth' });
-    }
-  </script>
 
 </body>
 </html>
