--- a/bootstrap2.html
+++ b/bootstrap2.html
@@ -3,26 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap2 Refactored Layout</title>
+  <title>Bootstrap2 – Refactored Layout</title>
 
   <!-- Bootstrap CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv3WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous"
   >
 
   <style>
-    :root {
-      --header-height: 18vh;
-      --footer-height: 18vh;
-      --scroll-box-width: 300px;
-      --scroll-box-height: 60vh;
-      --shadow-default: 0 4px 8px rgba(0,0,0,0.2);
-      --shadow-hover: 0 8px 16px rgba(0,0,0,0.3);
-    }
-
+    /* Global */
     body {
       background-color: #f8f9fa;
       font-family: "Segoe UI", Tahoma, sans-serif;
@@ -31,15 +23,15 @@
     }
 
     /* Header + Footer */
-    .layout-section {
-      height: var(--header-height);
+    .section {
+      height: 18vh;
       display: flex;
       justify-content: center;
       align-items: center;
       font-size: 28px;
       font-weight: 700;
       color: white;
-      text-shadow: 1px 1px 2px rgba(0,0,0,.3);
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
     }
 
     .header {
@@ -48,16 +40,15 @@
 
     .footer {
       background: linear-gradient(90deg, #0d6efd, #3b82f6);
-      height: var(--footer-height);
     }
 
-    /* Horizontal Scroll Section */
+    /* Horizontal scrolling layout */
     .scroll-container {
       display: flex;
       overflow-x: auto;
       scroll-snap-type: x mandatory;
       scroll-behavior: smooth;
-      padding: 20px 0;
+      padding: 30px 0;
       gap: 20px;
     }
 
@@ -65,10 +56,11 @@
       display: none;
     }
 
-    /* Scroll Items */
     .scroll-item {
-      min-width: var(--scroll-box-width);
-      height: var(--scroll-box-height);
+      min-width: 300px;
+      height: 60vh;
+      background-color: #6c757d;
+      color: white;
       border-radius: 15px;
       display: flex;
       justify-content: center;
@@ -76,14 +68,13 @@
       font-size: 26px;
       font-weight: 600;
       scroll-snap-align: start;
-      box-shadow: var(--shadow-default);
-      transition: transform 0.25s ease, box-shadow 0.25s ease;
-      color: white;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      transition: transform .25s ease, box-shadow .25s ease;
     }
 
     .scroll-item:hover {
       transform: translateY(-6px);
-      box-shadow: var(--shadow-hover);
+      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
     }
   </style>
 </head>
@@ -91,21 +82,23 @@
 <body>
 
   <!-- Header -->
-  <header class="layout-section header">
+  <header class="section header">
     Bootstrap2 Refactored Layout
   </header>
 
-  <!-- Horizontal Scroll Section -->
-  <main class="scroll-container">
+  <!-- Scrollable content -->
+  <div class="scroll-container">
+
     <div class="scroll-item bg-warning text-dark">Left</div>
     <div class="scroll-item bg-success">Center</div>
     <div class="scroll-item bg-info text-dark">Right</div>
-    <div class="scroll-item bg-primary">Item 4</div>
-    <div class="scroll-item bg-danger">Item 5</div>
-  </main>
+    <div class="scroll-item bg-primary">Extra 1</div>
+    <div class="scroll-item bg-danger">Extra 2</div>
+
+  </div>
 
   <!-- Footer -->
-  <footer class="layout-section footer">
+  <footer class="section footer">
     Footer
   </footer>
 
