--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
 
-    <!-- Bootstrap 5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Correct Bootstrap 5.3.3 CDN -->
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+        crossorigin="anonymous"
+    >
 
     <style>
         .profile-img {
@@ -24,26 +29,19 @@
 
         /* Stylish Footer */
         footer {
-            background-color: #222;
+            background-color: #000;
             color: #bbb;
-            
+            padding: 20px 0;
+            text-align: center;
+            margin-top: 40px;
+            border-top: 2px solid #333;
+            transition: all 0.3s ease;
         }
-       footer {
-    background-color: #000;     /* Pure black */
-    color: #bbb;                /* Soft light gray text */
-    padding: 20px 0;
-    text-align: center;
-    margin-top: 40px;
-    border-top: 2px solid #333; /* Subtle border */
-    transition: all 0.3s ease;
-}
 
-footer:hover {
-    background-color: #000;     /* Keep black even on hover */
-    color: #fff;                /* Text becomes bright white */
-    transform: translateY(-3px); /* Lift animation */
-}
-
+        footer:hover {
+            color: #fff;
+            transform: translateY(-3px);
+        }
 
         /* CONTACT CARD STYLING */
         .contact-card {
@@ -55,7 +53,6 @@ footer:hover {
             box-shadow: 0px 4px 10px rgba(0,0,0,0.05);
         }
 
-        /* Hover effect */
         .contact-card:hover {
             border-color: #007bff;
             transform: translateY(-5px);
@@ -70,9 +67,9 @@ footer:hover {
         .contact-item:hover {
             color: #007bff;
         }
-        
     </style>
 </head>
+
 <body class="bg-light">
 
     <!-- HEADER -->
@@ -101,13 +98,13 @@ footer:hover {
                     <a href="calculator.html" class="list-group-item list-group-item-action">Calculator</a>
                     <a href="cell.html" class="list-group-item list-group-item-action">Cell</a>
                     <a href="page.html" class="list-group-item list-group-item-action">Page</a>
-                    <a href="bootstrap1.html" class="list-group-item list-group-item-action">bootstrap1</a>
-                    <a href="bootstrap2.html" class="list-group-item list-group-item-action">bootstrap2</a>
-                    <a href="bootstrap3.html" class="list-group-item list-group-item-action">bootstrap3</a>
+                    <a href="bootstrap1.html" class="list-group-item list-group-item-action">Bootstrap 1</a>
+                    <a href="bootstrap2.html" class="list-group-item list-group-item-action">Bootstrap 2</a>
+                    <a href="bootstrap3.html" class="list-group-item list-group-item-action">Bootstrap 3</a>
                 </div>
             </nav>
 
-            <!-- CONTENT -->
+            <!-- MAIN CONTENT -->
             <main class="col-12 col-md-9 col-lg-10 p-4">
                 <h2 class="fw-bold">My Profile</h2>
                 <p class="lead">
@@ -115,7 +112,7 @@ footer:hover {
                     I am a student of the Software Engineering Department.
                 </p>
 
-                <!-- CONTACT ME SECTION -->
+                <!-- CONTACT CARD -->
                 <div class="contact-card mt-4">
                     <h4 class="fw-bold mb-3">Contact Me</h4>
 
@@ -129,6 +126,24 @@ footer:hover {
 
                     <p class="contact-item">
                         📍 Address: <strong>Addis Ababa, Ethiopia</strong>
-<footer>
-  <p>&copy;2025 Abdulmejid KASSIM.All rights Reserved.</p>
-</footer>
+                    </p>
+                </div>
+            </main>
+
+        </div>
+    </div>
+
+    <!-- FOOTER -->
+    <footer>
+        <p>&copy; 2025 Abdulmejid Kassim. All rights Reserved.</p>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous">
+    </script>
+
+</body>
+</html>
