--- a/bootstrap2.html
+++ b/bootstrap2.html
@@ -1,106 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap2 – Refactored Layout</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap2 Refactored</title>
 
-  <!-- Bootstrap CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous"
-  >
+    <!-- Bootstrap 5.3.3 CSS -->
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+        crossorigin="anonymous"
+    >
 
-  <style>
-    /* Global */
-    body {
-      background-color: #f8f9fa;
-      font-family: "Segoe UI", Tahoma, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
+    <style>
+        body {
+            background-color: #f8f9fa;
+            margin: 0;
+            font-family: "Segoe UI", Tahoma, sans-serif;
+        }
 
-    /* Header + Footer */
-    .section {
-      height: 18vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 28px;
-      font-weight: 700;
-      color: white;
-      text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
-    }
+        /* Header/Footer */
+        header, footer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 28px;
+            font-weight: 700;
+            color: white;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+            padding: 18px 0;
+        }
 
-    .header {
-      background: linear-gradient(90deg, #dc3545, #e4606d);
-    }
+        header {
+            background: linear-gradient(90deg, #dc3545, #e4606d);
+        }
 
-    .footer {
-      background: linear-gradient(90deg, #0d6efd, #3b82f6);
-    }
+        footer {
+            background: linear-gradient(90deg, #0d6efd, #3b82f6);
+        }
 
-    /* Horizontal scrolling layout */
-    .scroll-container {
-      display: flex;
-      overflow-x: auto;
-      scroll-snap-type: x mandatory;
-      scroll-behavior: smooth;
-      padding: 30px 0;
-      gap: 20px;
-    }
+        /* Horizontal scroll container */
+        .scroll-container {
+            display: flex;
+            overflow-x: auto;
+            scroll-snap-type: x mandatory;
+            scroll-behavior: smooth;
+            padding: 20px 0;
+            gap: 20px;
+        }
 
-    .scroll-container::-webkit-scrollbar {
-      display: none;
-    }
+        .scroll-container::-webkit-scrollbar {
+            display: none;
+        }
 
-    .scroll-item {
-      min-width: 300px;
-      height: 60vh;
-      background-color: #6c757d;
-      color: white;
-      border-radius: 15px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 26px;
-      font-weight: 600;
-      scroll-snap-align: start;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      transition: transform .25s ease, box-shadow .25s ease;
-    }
+        /* Scroll items */
+        .scroll-item {
+            min-width: 300px;
+            height: 60vh;
+            border-radius: 15px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 26px;
+            font-weight: 600;
+            scroll-snap-align: start;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            transition: transform 0.3s, box-shadow 0.3s;
+            color: white;
+        }
 
-    .scroll-item:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
-    }
-  </style>
+        .scroll-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+        }
+
+        /* Colors for scroll items */
+        .bg-warning { background-color: #ffc107 !important; color: black !important; }
+        .bg-success { background-color: #198754 !important; }
+        .bg-info { background-color: #0dcaf0 !important; color: black !important; }
+        .bg-primary { background-color: #0d6efd !important; }
+        .bg-danger { background-color: #dc3545 !important; }
+    </style>
 </head>
-
 <body>
 
-  <!-- Header -->
-  <header class="section header">
-    Bootstrap2 Refactored Layout
-  </header>
+    <!-- Header -->
+    <header>Bootstrap2 Horizontal Scroll Layout</header>
 
-  <!-- Scrollable content -->
-  <div class="scroll-container">
+    <!-- Scrollable Content -->
+    <div class="scroll-container">
+        <div class="scroll-item bg-warning">Left</div>
+        <div class="scroll-item bg-success">Center</div>
+        <div class="scroll-item bg-info">Right</div>
+        <div class="scroll-item bg-primary">Extra 1</div>
+        <div class="scroll-item bg-danger">Extra 2</div>
+    </div>
 
-    <div class="scroll-item bg-warning text-dark">Left</div>
-    <div class="scroll-item bg-success">Center</div>
-    <div class="scroll-item bg-info text-dark">Right</div>
-    <div class="scroll-item bg-primary">Extra 1</div>
-    <div class="scroll-item bg-danger">Extra 2</div>
+    <!-- Footer -->
+    <footer>Footer</footer>
 
-  </div>
-
-  <!-- Footer -->
-  <footer class="section footer">
-    Footer
-  </footer>
-
+    <!-- Bootstrap JS -->
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous">
+    </script>
 </body>
 </html>
