--- a/bootstrap3.html
+++ b/bootstrap3.html
@@ -1,85 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Bootstrap Layout</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap3 Refactored</title>
 
-  <!-- Bootstrap CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous"
-  >
+    <!-- Bootstrap 5.3.3 CSS -->
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+        crossorigin="anonymous"
+    >
 
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow-x: hidden;
-    }
+    <style>
+        body {
+            background-color: #f8f9fa;
+            margin: 0;
+            font-family: "Segoe UI", Tahoma, sans-serif;
+        }
 
-    .column-box {
-      height: 100vh;
-      min-width: 250px; /* ensures scroll on small screens */
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 48px;
-      font-weight: 600;
-      flex-shrink: 0; /* prevent shrinking */
-    }
+        /* Three-column layout */
+        .column-box {
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 48px;
+            font-weight: 600;
+            color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
 
-    .left-column {
-      background-color: #ffcc99;
-    }
+        .column-box:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+        }
 
-    .center-column {
-      background-color: #99a0ff;
-    }
+        .bg-left { background-color: #ffcc99; color: black; }
+        .bg-center { background-color: #99a0ff; }
+        .bg-right { background-color: #ffcc99; color: black; }
 
-    .right-column {
-      background-color: #ffcc99;
-    }
-
-    .scroll-container {
-      display: flex;
-      flex-wrap: nowrap;
-      overflow-x: auto;
-      width: 100%;
-      scroll-behavior: smooth;
-    }
-
-    /* Optional: hide scrollbar in Webkit */
-    .scroll-container::-webkit-scrollbar {
-      display: none;
-    }
-  </style>
+        footer {
+            background: #0d0d0d;
+            color: #ccc;
+            padding: 25px 0;
+            text-align: center;
+            margin-top: 0;
+            border-top: 1px solid #333;
+        }
+    </style>
 </head>
 <body>
 
-  <div class="scroll-container">
-    <div class="column-box left-column">
-      Left
+    <div class="container-fluid p-0">
+        <div class="row g-0">
+
+            <div class="col-4 column-box bg-left">Left</div>
+            <div class="col-4 column-box bg-center">Center</div>
+            <div class="col-4 column-box bg-right">Right</div>
+
+        </div>
     </div>
 
-    <div class="column-box center-column">
-      Center
-    </div>
+    <footer>
+        <p class="mb-0">&copy; 2025 Abdulmejid Kassim. All rights Reserved.</p>
+    </footer>
 
-    <div class="column-box right-column">
-      Right
-    </div>
-  </div>
-
-  <!-- Bootstrap JS Bundle -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"
-  ></script>
-
+    <!-- Bootstrap JS -->
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous">
+    </script>
 </body>
 </html>
