--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
 
-   
-    <link 
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-    crossorigin="anonymous"
->
-
+    <!-- Bootstrap 5.3.3 CSS -->
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+        crossorigin="anonymous"
+    >
 
     <style>
+        /* PROFILE IMAGE */
         .profile-img {
             width: 70px;
             height: 70px;
@@ -22,29 +22,31 @@
             border-radius: 50%;
         }
 
-        /* Beautiful Header */
+        /* HEADER */
         header {
             background: linear-gradient(135deg, #007bff, #003e8a);
             color: white;
         }
 
-        /* Stylish Footer */
+        /* FOOTER */
         footer {
-            background-color: #000;
-            color: #bbb;
-            padding: 20px 0;
+            background: #0d0d0d;
+            color: #ccc;
+            padding: 25px 0;
             text-align: center;
-            margin-top: 40px;
-            border-top: 2px solid #333;
-            transition: all 0.3s ease;
+            margin-top: 50px;
+            border-top: 1px solid #333;
+            letter-spacing: 0.5px;
+            font-size: 0.95rem;
+            transition: all 0.3s ease-in-out;
         }
 
         footer:hover {
             color: #fff;
-            transform: translateY(-3px);
+            transform: translateY(-2px);
         }
 
-        /* CONTACT CARD STYLING */
+        /* CONTACT CARD */
         .contact-card {
             background: white;
             border-radius: 12px;
@@ -70,13 +72,11 @@
         }
     </style>
 </head>
-
 <body class="bg-light">
 
     <!-- HEADER -->
     <header class="py-3 px-4 shadow d-flex align-items-center gap-3">
         <img src="profile.jpg" class="profile-img" alt="User Picture">
-
         <div>
             <h4 class="m-0 fw-bold text-white">NAME: ABDULMEJID KASSIM</h4>
             <p class="m-0 text-light">ID: NSR/0010/16</p>
@@ -90,7 +90,6 @@
             <!-- SIDEBAR -->
             <nav class="col-12 col-md-3 col-lg-2 bg-white border-end p-3">
                 <h5 class="fw-bold">Labs & Assignments</h5>
-
                 <div class="list-group mt-3">
                     <a href="facebook.html" class="list-group-item list-group-item-action">Facebook</a>
                     <a href="index2.html" class="list-group-item list-group-item-action">Index2</a>
@@ -105,7 +104,7 @@
                 </div>
             </nav>
 
-            <!-- MAIN CONTENT -->
+            <!-- CONTENT -->
             <main class="col-12 col-md-9 col-lg-10 p-4">
                 <h2 class="fw-bold">My Profile</h2>
                 <p class="lead">
@@ -116,18 +115,9 @@
                 <!-- CONTACT CARD -->
                 <div class="contact-card mt-4">
                     <h4 class="fw-bold mb-3">Contact Me</h4>
-
-                    <p class="contact-item">
-                        📧 Email: <strong>mezidkassim22@gmail.com</strong>
-                    </p>
-
-                    <p class="contact-item">
-                        📞 Phone: <strong>+251 931109462</strong>
-                    </p>
-
-                    <p class="contact-item">
-                        📍 Address: <strong>Addis Ababa, Ethiopia</strong>
-                    </p>
+                    <p class="contact-item">📧 Email: <strong>mezidkassim22@gmail.com</strong></p>
+                    <p class="contact-item">📞 Phone: <strong>+251 931109462</strong></p>
+                    <p class="contact-item">📍 Address: <strong>Addis Ababa, Ethiopia</strong></p>
                 </div>
             </main>
 
@@ -136,15 +126,15 @@
 
     <!-- FOOTER -->
     <footer>
-        <p>&copy; 2025 Abdulmejid Kassim. All rights Reserved.</p>
+        <p class="mb-0">&copy; 2025 Abdulmejid Kassim. All rights Reserved.</p>
     </footer>
 
-        <script>
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous">
-</script>
-
+    <!-- Bootstrap 5.3.3 JS Bundle -->
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous">
+    </script>
 
 </body>
 </html>
