--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <style>
         /* PROFILE IMAGE */
-        .profile-img {
+        .abdulmejid-img {
             width: 70px;
             height: 70px;
             object-fit: cover;
@@ -76,7 +76,7 @@
 
     <!-- HEADER -->
     <header class="py-3 px-4 shadow d-flex align-items-center gap-3">
-        <img src="profile.jpg" class="profile-img" alt="User Picture">
+        <img src="abdulmejid.png" class="profile-img" alt="User Picture">
         <div>
             <h4 class="m-0 fw-bold text-white">NAME: ABDULMEJID KASSIM</h4>
             <p class="m-0 text-light">ID: NSR/0010/16</p>
@@ -109,7 +109,7 @@
                 <h2 class="fw-bold">My Profile</h2>
                 <p class="lead">
                     Hi, I am Abdulmejid and this is my profile section.
-                    I am a student of the Software Engineering Department.
+                    I am undergraduate Software Engineering Department.
                 </p>
 
                 <!-- CONTACT CARD -->
