Fix alt text for user picture in header

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-- HEADER -->
     <header class="py-3 px-4 shadow d-flex align-items-center gap-3">
-        <img src="abdulmejid.png" class="profile-img" alt="User Picture">
+        <img src="abdulmejid.png" class="profile-img" alt="User's Picture">
         <div>
             <h4 class="m-0 fw-bold text-white">NAME: ABDULMEJID KASSIM</h4>
             <p class="m-0 text-light">ID: NSR/0010/16</p>
