Rename class from 'abdulmejid-img' to 'profile-img'

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <style>
         /* PROFILE IMAGE */
-        .abdulmejid-img {
+        .profile-img {
             width: 100px;
             height:90px;
             object-fit: cover;
